# QVanced

./: .gitignore  CMakeLists.txt  io.github.thebill2001.qvanced.desktop.in  io.github.thebill2001.qvanced.metainfo.xml
.github/workflows/: windows.yaml.disabled  windows_msvc.yaml
src/: .qmlls.ini  CMakeLists.txt  app.cpp  app.h  main.cpp  qvancedapp.cpp  qvancedapp.h  qvancedconfig.kcfg  qvancedconfig.kcfgc  qvancedglobal.h
src/apkprovider/: apkmirrorprovider.cpp  apkmirrorprovider.h  apkproviderabstract.cpp  apkproviderabstract.h
src/contents/ui/: About.qml  Main.qml
src/utils/: htmlparser.cpp  htmlparser.h  network.h
